2014-05-17	Andreas Kirschbaum

	* For all files being written: add error checks and retain the
	previous file contents if a write error occurs.

2014-05-15	SilverNexus
	* server/c_misc.c: Don't allow account-bound characters to change
	  character password. It did not affect the account password, anyway.

2014-05-13	SilverNexus
	* server/c_misc.c: Fix in-game version command. Previous behavior
	  displayed "Crossfire FULL_VERSION".

2014-04-19	Kevin Zheng
	* server/server.c: Improve server shutdown command.

2014-04-18	Kevin Zheng
	* utils/crossloop.in: Add crash notification to crossloop.

2014-04-17	Kevin Zheng
	* server/init.c: Remove outdated "-o" flag.

2014-04-12	Kevin Zheng
	* utils/cfmeta-rrd: Retire since it no longer works with new metaserver.
	* utils/checkInternalPrototype.sh: Retire in favor of compiler flags.
	* utils/crossfire-loop.c: Retire in favor of shell script.
	* utils/get_release.in: Retire since CVS is gone.
	* utils/update_rp: Retire since CVS is gone.

2014-04-07	Kevin Zheng
	* utils/crossloop.in: Remove flags related to non-default plugins.

2014-04-06	Kevin Zheng
	* server/init.c: Clean up and sort command-line arguments.
	* server/move.c: Clean up "start to attack" message.
	* server/server.c: Retire des_crypt(3) in favor of crypt(3).

==============================================================================
Changes for 1.71.0
==============================================================================

2014-03-29	Kevin Zheng
	* server/server.c: Fix emergency map.

2014-03-17	Kevin Zheng
	* devel/crossfire-config.c: Retire build parameter dumper.

2014-03-04	Kevin Zheng
	* configure.ac: Disable newspaper and logger plugin by default.
	* server/: Reduce unnecessary startup verbosity.
	* server/misc.c: Shorten log level messages.

2014-01-01	Nicolas Weeger
	* common/map.c: Ensure objects are on a valid map position.

2013-11-29	SilverNexus
	* server/attack.c: Added damage for when a player burns an equipped