@@ -101,7 +101,6 @@ static const struct player_cmd_mapping player_commands[] = {
     { "lookat",     look_at_cmd,                       1 },
     { "lock",       (func_uint8_int_pl)lock_item_cmd,  1 },
     { "mark",       (func_uint8_int_pl)mark_item_cmd,  1 },
-    { "mapredraw",  map_redraw_cmd,                    0 },  /* Added: phil */
     { "inscribe",   inscribe_scroll_cmd,               0 },
     { NULL,         NULL,                              0 }   /* terminator */
 };
